css/lp.css
/* ... */
nav.top li a:hover {
	text-decoration:underline
}

nav.floating {
	position:fixed;
	z-index:500;
}

nav.floating ul {
	list-style:none;
	margin: 0 30px 0 0;
	padding: 24px 0 0 0;
	width:171px;
	background:transparent url(../img/nav-background.png) top left no-repeat
}

nav.floating li, nav.floating div {
	margin:0;
	padding:0;
	margin-left:23px;
	width:148px;
}

nav.floating a:link, nav.floating a:visited {
	display:block;
	padding: 0 0 0 10px;
	font-family: GothamBold, Helvetica, Arial, sans-serif;
	font-size: 12px;
	font-weight:normal;
	color: #999;
	text-decoration: none;
	text-align: left;
	line-height: 38px;
	background: rgba(0,0,0,.1);
}

nav.floating a:hover {
	background: rgba(0,0,0,.33);
	color:#fff
}

nav.floating a.active, nav.floating a.active:hover  {
	background:#000;
	color: #fff;
	cursor: default
}

nav.floating .cta a:link, nav.floating .cta a:visited {
	display:block;
	margin-top:37px;
	padding: 0;
	color:#fff;
	background: #f90 url(../img/sprite.png) no-repeat 0px -195px;
	font-family: GothamBold, Helvetica, Arial, sans-serif;
	font-size:14px;
	line-height: 50px;
	font-weight:normal;
	text-transform: uppercase;
	text-align:center;
	text-decoration:none;
	text-shadow:0 3px 3px rgba(0,0,0,.33);
}

nav.floating .cta a:hover {
	text-shadow:0 4px 4px rgba(0,0,0,.66);
}

nav.floating .logo {
	margin-left: 16px;
}
nav.floating .logo a {
	margin: 50px 0 0 0;
	display: block;
	width: 151px;
	height: 61px;
	background: transparent url(../img/sprite.png) no-repeat 0 -60px;
}

.page {
	background: #fff 50% 0 no-repeat fixed;
	/*background-size: 100% auto;*/
	height: 1000px;
	width: 1000px;
	overflow: hidden;
	box-sizing: border-box;
	padding: 0;
	margin: 0 auto;
}
.content {
	font-size: 48px;
	margin: 0 auto;
	overflow: visible;
	color: #fff;
	padding: 40px 0 0 0;
	display: inline-block;
	position: relative;
	/*left: 50%;*/
	margin-left: 142px;
	width: 650px;
}

.heading {
	margin-bottom:20px
}
.heading h1 {
	color: #000;
}

.page h1 {
	font-family: GothamMedium, Helvetica, Arial, sans-serif;
	font-size:48px;
	font-weight:500;
	text-transform:uppercase;
	line-height:43px;
	margin: 0;
}

.page h2 {
	font-family: GothamBold, Helvetica, Arial, sans-serif;
	font-size:22px;
	font-weight: normal;
	margin: 3px 0 8px 0;
}

.copy {
	position:relative;
	font-family:Arial, Helvetica, sans-serif;
	font-size:15px;
	color:#999;
	line-height:19px
}

/* intro */

#intro .heading {
	margin-top: 80px;
}

#intro h2 {
	width: 600px;
	color: #7ac142
}

#intro .copy {
	position: relative;
	padding-left:365px;
	width:270px;
	height:400px;
}

#intro .copy .bg {
	position: absolute;
	top: 0;
	left: -28px;
	background: transparent url(../img/content-background-main.png) 0px 0px no-repeat;
	height: 331px;
	width: 453px;
}
.backgroundsize #intro .copy .bg,
.backgroundsize #fifth .copy .bg {
	background-size: 100%;
}
.no-backgroundsize #intro .copy .bg.modernized,
.no-backgroundsize #fifth .copy .bg.modernized {
	background: none;
}
.no-backgroundsize #intro .copy .bg img,
.no-backgroundsize #fifth .copy .bg img {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.tootip {
	margin: 130px 0 0 0;
	float: right;
}

.tootip p {
	text-align: center;
	margin: 0 0 12px 0;
	font-size: 14px;
}

.tootip .arrow {
	background: transparent url(../img/sprite.png) no-repeat 0px -250px;
	width: 18px;
	height: 18px;
	margin: 0 auto;
}

/* first */


#first h2 {
	color:#b93294
}

#first .copy p {
	width: 570px
}

#first .channelLineup {
	position: relative;
	margin-top: 0px;
	width:605px;
	height:75px;
	border:1px solid #ccc;
	overflow: hidden;
}

#first .channelLineup .carousel_area {
	position: relative;
	width: 4182px;
	height:75px;
	background: #fff url(../img/logos_hd.jpg) repeat-x left center;
}


/* second */

#second h2 {
	color:#f90
}

#second .copy {
	background:transparent url(../img/streaming-devices.png) 160px 0 no-repeat
}

#second .copy p {
	width: 270px
}

#second .copy p.small {
	width: 550px
}

#second .copy p.caption {
	font-size:12px;
	width: 160px;
	margin:67px 0 0 110px;
	color:#999;
	line-height:14px
}

.carousel_header {
	font-weight: normal;
	font-size: 15px;
	margin: 25px 0 3px 0;
	width: 605px;
}

.carousel_header p {
	float: left;
	margin: 0;
}
.carousel_header a {
	float: right;
}

#second .channelLineup {
	position: relative;
	width:605px;
	height:75px;
	border:1px solid #ccc;
	background: white;
}

.carousel_advance {
	position: absolute;
	top: 0;
	display: block;
	width: 30px;
	height: 75px;
	background: #fff url(../img/sprite.png) no-repeat;
}
.carousel_advance.left {
	left: 0;
	background-position: 0px -120px;
}
.carousel_advance.right {
	left: 575px;
	background-position: -30px -120px;	
}

#second .channelLineup .carousel_area {
	position: absolute;
	overflow: hidden;
	height:75px;
	width: 545px;
	top: 0;
	left: 30px;
}
.carousel.apps .app_links {
	position: absolute;
	width: auto;
	left: 0px;
	white-space: nowrap;
	font-size: 0;
}

.carousel.apps .app_links a {
	display: inline-block;
	width: 60px;
	height: 60px;
	background: red;
	margin: 7px 15px;
	font-size: 24px;
	background: transparent no-repeat;
}
.multiplebgs .carousel.apps .app_links a {
	background-image: url(../img/sprite.png), url(../img/sprite.png), url(../img/sprite.png);
}
.no-multiplebgs .carousel.apps .app_links a {
	position: relative;
}
.no-multiplebgs .carousel.apps .app_links div {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-image: url(../img/sprite.png);
}
.no-multiplebgs .carousel.apps .app_links div.shape { background-position: -60px 0px; }
.no-multiplebgs .carousel.apps .app_links div.gleen { background-position: 0px 0px; }

.no-multiplebgs .carousel.apps .app_links a.btn2go div.logo		{ background-position: -120px 0px; }
.no-multiplebgs .carousel.apps .app_links a.cnn div.logo		{ background-position: -180px 0px; }
.no-multiplebgs .carousel.apps .app_links a.epix div.logo		{ background-position: -240px 0px; }
/* ... */

